syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "SecurityLoginExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// UserLoginHistory
message UserLoginHistoryData {
    option (routines.entity_type) = "UserLoginHistory";
    option (routines.keys).keys = "user_login_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: userLoginId, fromDate
    // fields
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    string visit_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    string password_used = 5 [(routines.opts).field_type = "long-varchar"];
    routines.Indicator successful_login = 6 [(routines.opts).field_type = "indicator"];
    string origin_user_login_id = 7 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    string party_id = 10 [(routines.opts).field_type = "id"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message UserLoginHistoryKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp from_date = 2 [(routines.opts).field_type = "date-time"];
}

message UserLoginHistoryList{
    repeated UserLoginHistoryData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserLoginHistories` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// User Login Password History
message UserLoginPasswordHistoryData {
    option (routines.entity_type) = "UserLoginPasswordHistory";
    option (routines.keys).keys = "user_login_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: userLoginId, fromDate
    // fields
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp from_date = 2 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 3 [(routines.opts).field_type = "date-time"];
    string current_password = 4 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message UserLoginPasswordHistoryKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp from_date = 2 [(routines.opts).field_type = "date-time"];
}

message UserLoginPasswordHistoryList{
    repeated UserLoginPasswordHistoryData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserLoginPasswordHistories` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// User Login History
message UserLoginSessionData {
    option (routines.entity_type) = "UserLoginSession";
    option (routines.keys).keys = "user_login_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: userLoginId
    // fields
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong", (google.api.graphql.relay_options).id = true];
    google.protobuf.Timestamp saved_date = 2 [(routines.opts).field_type = "date-time"];
    string session_data = 3 [(routines.opts).field_type = "very-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string tenant_id = 6 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message UserLoginSessionKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong", (google.api.graphql.relay_options).id = true];
}

message UserLoginSessionList{
    repeated UserLoginSessionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserLoginSessions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


